[tool.poetry]
name = "ankicc"
version = "0.3.0"
description = "Convert all fields of Anki deck package (*.apkg) between traditional and simplified Chinese"
authors = ["kaiiiz <ukaizheng@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
ankipandas = "^0.3.10"
OpenCC = "^1.1.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
ankicc = 'ankicc.console:run'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
